--- a/index.html
+++ b/index.html
@@ -6,18 +6,35 @@
   <body>
     <img src="https://thumbs.dreamstime.com/t/coffee-cup-beach-background-47279363.jpg"/>
 
-<h1 style="color: blue; font-size:40px"> "switch vs if/else" </h1>
+      <h1 style="color: blue; font-size:40px"> "switch vs if/else" </h1>
 
-<p style="font-size:35px"> The difference between "switch" and "if/else" could be said the speed of execution.
-    The switch statement operates faster than if/else. The compiler creates a jump table during compilation.
-    It jumps for value catching. If/else is a strict type of condition check.
-    This allows for deciding which case has to executed, not which case needs to be satisfied.
-    Switch statements are easier to read in comparison to if/else statements. </p>
-<p style="font-size:35px"> Limitations exist for switch statements as well. A switch statement must know the value during compilation.
-    You cannot use like expressions or flat expressions. Variable expressions are not allowed either.</p>
-<p style="font-size:35px"> For complex comparisons or if there are large numbers to be compared, switch statements are good to use.</p>
-<p style="font-size:35px"> A if/else statement would be good for simple or small amount of compares.
-<p style="font-size:35px"> They are both used for evaluating conditions. </p>
+        <p style="font-size:35px"> The difference between "switch" and "if/else" could be said the speed of execution.
+          The switch statement operates faster than if/else. The compiler creates a jump table during compilation.
+          It jumps for value catching. If/else is a strict type of condition check.
+          This allows for deciding which case has to executed, not which case needs to be satisfied.
+          Switch statements are easier to read in comparison to if/else statements.
+        </p>
+        <p style="font-size:35px"> Limitations exist for switch statements as well. A switch statement must know the value during compilation.
+          You cannot use like expressions or flat expressions. Variable expressions are not allowed either.
+        </p>
+        <p style="font-size:35px"> For complex comparisons or if there are large numbers to be compared, switch statements are good to use.
+        </p>
+        <p style="font-size:35px"> A if/else statement would be good for simple or small amount of compares.
+        <p style="font-size:35px"> They are both used for evaluating conditions.
+        </p>
 
+        <h1 style="color: blue; font-size:40px"> "‘=’ vs ‘==’ vs ‘.equals’" </h1>
+
+        <p style="font-size:35px"> Im java, the '=' would be used in a declaration of an int value such as "a = 10".
+        </P>
+        <p style="font-size:35px"> '==' is an operator that is used to check memory location or address of two objects are same or not.
+        </P>
+        <p style="font-size:35px"> '.equals()'is a method. The main purpose is to compare the state of two objects or contents of the object.
+        </P>
+
+        <h1 style="color: blue; font-size:40px"> "What happens when you include ‘import java.util.Scanner;’ in your code? Where does this functionality come from? What is the ‘java’ in ‘java.util.Scanner;’?" </h1>
+
+        <p style="font-size:35px">
+        </P>
   </body>
 </html>
